HHH-18252 fix handling of @IdClass in repository methods